--- a/index.html
+++ b/index.html
@@ -738,7 +738,8 @@
         "Rotterdam": { lat: 51.922, lng: 4.479 },
         "Den Haag": { lat: 52.070, lng: 4.300 },
         "Amsterdam": { lat: 52.370, lng: 4.895 },
-    "Leeuwarden": { lat: 53.201, lng: 5.799 }
+    "Leeuwarden": { lat: 53.201, lng: 5.799 },
+    "Emmen": { lat: 52.785, lng: 6.897 }
         // Ajoute d'autres villes ici si besoin
     };
 
