--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@
                 <button class="navbar-link dropdown-toggle">📖 Exercices ▼</button>
                 <div class="dropdown-menu">
                     <a href="revision_imparfait.html" class="dropdown-item">Révision imparfait</a>
+                    <a href="revision_present.html" class="dropdown-item">Révision présent</a>
                     <!-- Tu pourras ajouter d'autres liens ici plus tard -->
                 </div>
             </div>
