--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
                 <div class="dropdown-menu">
                     <a href="revision_imparfait.html" class="dropdown-item">Révision imparfait</a>
                     <a href="revision_present.html" class="dropdown-item">Révision présent</a>
+                    <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
                     <!-- Tu pourras ajouter d'autres liens ici plus tard -->
                 </div>
             </div>
