ajout revision vocabulaire

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                     <a href="revision_imparfait.html" class="dropdown-item">Révision imparfait</a>
                     <a href="revision_present.html" class="dropdown-item">Révision présent</a>
                     <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
-                    <!-- Tu pourras ajouter d'autres liens ici plus tard -->
+                    <a href="revision_vocabulaire.html" class="dropdown-item">Révision vocabulaire</a>
                 </div>
             </div>
             <a href="admin.html" class="navbar-link admin" id="adminLink" style="display: none;">⚙️ Admin</a>
