ajout revision vocabulaire

--- a/admin.html
+++ b/admin.html
@@ -282,7 +282,7 @@
     <div id="loginPrompt" class="login-prompt">
         <h3>🔐 Accès réservé aux administrateurs</h3>
         <p style="color: #666; margin-bottom: 20px;">Connectez-vous avec Google pour accéder à l'espace d'administration</p>
-        <a href="generateur.html">🔒 Se connecter</a>
+        <button onclick="ouvrirConnexionGoogle()" style="display: inline-block; padding: 15px 30px; background: #c41e3a; color: white; text-decoration: none; border-radius: 8px; font-weight: bold; transition: all 0.3s ease; margin-top: 15px; border: none; cursor: pointer;">🔒 Se connecter avec Google</button>
     </div>
 </div>
 
