ajout revision vocabulaire

--- a/admin.html
+++ b/admin.html
@@ -266,6 +266,16 @@
         </div>
 
         <div class="admin-section">
+            <h3>📖 Gestion du vocabulaire</h3>
+            <div class="button-group">
+                <a href="admin_vocabulaire.html" class="admin-button add">
+                    <span class="admin-button-emoji">📚</span>
+                    <span class="admin-button-text">Gérer le vocabulaire</span>
+                </a>
+            </div>
+        </div>
+
+        <div class="admin-section">
             <h3>📊 Statistiques</h3>
             <div style="background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 20px; border-radius: 12px;">
                 <p style="margin: 10px 0; color: #666;">
